cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib") 
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

set(VERSION_MAJOR "0")
set(VERSION_MINOR "1")
set(VERSION_PATCH "5")
set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})

# SVN (and its revision)
include(FindSubversion)
IF(Subversion_FOUND)
    if(EXISTS "${CMAKE_SOURCE_DIR}/.svn")
        Subversion_WC_INFO(${CMAKE_SOURCE_DIR} MY)
        SET(VCS_REVISION "${MY_WC_REVISION}")
    else ()
        SET(VCS_REVISION "-1")
    endif()
ELSE(Subversion_FOUND)
   SET(VCS_REVISION "-1")
ENDIF(Subversion_FOUND)

include_directories(include)

enable_testing()
add_subdirectory(include)
#add_subdirectory(doc)
add_subdirectory(libgwplog)
add_subdirectory(libgwp)
add_subdirectory(libgwpmem)
add_subdirectory(libgwpnet)
add_subdirectory(test)
